# studip-sync

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/studip_sync/: __main__.py  cli.py  studip.py
